# mai

./: .gitignore  LICENSE  README.md  mai.py  main-ui.py  main.py  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh  setup.bat  setup.ps1  setup.sh
.devcontainer/: devcontainer.json
mai/: __init__.py  chatbot.py  llm.py  ui.py
mai/helpers/: logging.py  prompts.py  taskmanager.py
mai/utils/: polly.py
rag_data/: aws-enterprise-support.csv  aws-enterprise-support.xlsx
src/: cli.py  mai.py  ui.py
src/mai/: __init__.py  constants.py  ui.py
src/mai/constants/: __init__.py  prompts.py
src/mai/helpers/: llm.py  logging.py  prompts.py  synthesizer.py  taskmanager.py  transcriber.py
src/mai/utils/: bedrock.py  styles.py
src/utils/: polly.py
utils/: colors.py  polly.py  prompts.py
