[build-system]
requires = ["setuptools >= 69", "wheel >= 0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "mai"
version = "0.0.1"
description = "Chatbot using Amazon Bedrock and LangChain "
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.9"
dependencies = ["boto3==1.34.74", "click==8.1.7", "faiss-cpu>=1.8", "keyboard==0.13.5", "langchain==0.1.13", "openai-whisper==20231117", "pyaudio==0.2.14", "pygame==2.5.2", "pyttsx4==3.0.15", "pyck@git+https://github.com/tchangkiat/pyck"]

[project.scripts]
mai = "mai:main"